<resources>
    <string name="app_name">Cans-n-Bottles</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="btn_login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="btn_collect">Please Collect</string>
    <string name="btn_locate">Show Locations</string>
    <string name="hint_zip">Zip Code</string>
    <string name="auth_failed">Authentication Failed!</string>
    <string name="logout">Logout</string>
    <string name="hint_radius">Radius (mi)</string>
    <string name="hint_cans">No. of Cans</string>
    <string name="hint_bottles">No. of Bottles</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="guest">Guest</string>
    <string name="anonymous">or sign in anonymously</string>
    <string name="login">Login</string>
    <string name="btn_claim">Claim</string>
    <string name="time_up">Time Up! The resources have been Freed. Claim again to pick up..</string>
    <string name="start_up">You have 30 minutes to collect the resources.</string>
</resources>
