<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chuckree.cans_n_bottles.CollectorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_zip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|number"
                android:hint="@string/hint_zip"
                android:nextFocusDown="@+id/input_radius"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_radius"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/hint_radius"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_locate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_locate"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_claim"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_claim"
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"/>
    </LinearLayout>


    <com.google.android.gms.maps.MapView
        android:id="@+id/collector_map"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"/>

</LinearLayout>
